// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HospitalizationDeathChart> (died plot) dataset1 renders correctly 1`] = `
<div
  style={
    Object {
      "height": "400px",
      "width": "600px",
    }
  }
>
  <div
    className="relative h-full"
  >
    <div
      className="h-full"
    >
      <div
        className="sc-bcXHqe idcAl"
      >
        <h3
          className="my-0 pr-10 pt-0 text-gray-500"
        >
          Estimated probability of death by age group
        </h3>
        <div
          className="sc-gswNZR jVvoKy"
        >
          <div
            className="sc-dkrFOg kGkFVY"
          >
            <div
              className="recharts-responsive-container"
              style={
                Object {
                  "height": "100%",
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "width": "100%",
                }
              }
            />
          </div>
          <div
            className="pl-2 pt-3 flex lg:inline flex-row w-full sm:w-auto md:justify-end sm:flex-col sm:pt-0 sm:pl-1 sm:pb-8  md:mt-auto"
          >
            <div>
              <div
                className="sc-eDvSVe dekPos"
              >
                <svg
                  height={30}
                  viewBox="-11 -15 22 30"
                  width={22}
                >
                  <g
                    stroke="#1F407A"
                    strokeWidth={2}
                  >
                    <line
                      x1={0}
                      x2={0}
                      y1={-13}
                      y2={13}
                    />
                    <line
                      x1={-8}
                      x2={8}
                      y1={-13}
                      y2={-13}
                    />
                    <line
                      x1={-8}
                      x2={8}
                      y1={13}
                      y2={13}
                    />
                  </g>
                  <circle
                    fill="#1F407A"
                    r={5}
                  />
                </svg>
                <div
                  className="sc-jSUZER dEFcBr"
                  style={
                    Object {
                      "color": "#1F407A",
                    }
                  }
                >
                  A random name
                </div>
              </div>
              <div
                className="sc-eDvSVe dekPos"
              >
                <svg
                  height={30}
                  viewBox="-11 -15 22 30"
                  width={22}
                >
                  <g
                    stroke="#bdc3c7"
                    strokeWidth={9}
                  >
                    <line
                      x1={0}
                      x2={0}
                      y1={-13}
                      y2={13}
                    />
                    <line
                      x1={-0}
                      x2={0}
                      y1={-13}
                      y2={-13}
                    />
                    <line
                      x1={-0}
                      x2={0}
                      y1={13}
                      y2={13}
                    />
                  </g>
                  <g
                    transform="translate(0, 0) scale(12, 3.5)"
                  >
                    <polygon
                      fill="#bdc3c7"
                      points="-1,0 0,1 1,0 0,-1"
                    />
                  </g>
                </svg>
                <div
                  className="sc-jSUZER dEFcBr"
                  style={
                    Object {
                      "color": "#7f8c8d",
                    }
                  }
                >
                  Other variants
                </div>
              </div>
            </div>
            <div
              className="flex flex-col justify-end pr-1 mb-2 overflow-hidden h-full w-auto"
              id="metric-with-tooltip"
            >
              <div
                data-for="metric-tooltip-Dead"
                data-tip="Number of samples taken from patients who eventually died (A random name)"
              >
                <div
                  className="flex w-full"
                >
                  <div
                    className="w-auto grow-0 text-xl sm:text-3xl md:text-5xl"
                    style={
                      Object {
                        "color": "#1F407A",
                      }
                    }
                  >
                    0
                  </div>
                  <div
                    className="sc-hLBbgP dYEqmk self-end"
                  />
                </div>
                <div
                  className="flex text-base text-gray-400 h-7 justify-start"
                  id="metric-title"
                >
                  <p
                    className="w-auto text-clip"
                  >
                    Dead 
                  </p>
                  <div
                    className="flex items-center pl-1 grow fill-current text-gray-600"
                    id="info-wrapper"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6a3.939 3.939 0 0 0-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 0 0-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0 0 12 6zm-1 10h2v2h-2z"
                      />
                      <path
                        d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje"
                id="metric-tooltip-Dead"
                role="tooltip"
                style={Object {}}
              >
                <div
                  className="react-tooltip-arrow styles-module_arrow__K0L3T"
                  style={Object {}}
                />
              </div>
            </div>
            <div
              className="flex flex-col justify-end pr-1 mb-2 overflow-hidden h-full w-auto"
              id="metric-with-tooltip"
            >
              <div
                data-for="metric-tooltip-Not dead"
                data-tip="Number of samples taken from patients who did not eventually die (A random name)"
              >
                <div
                  className="flex w-full"
                >
                  <div
                    className="w-auto grow-0 text-xl sm:text-3xl md:text-5xl"
                    style={
                      Object {
                        "color": "#1F407A",
                      }
                    }
                  >
                    110
                  </div>
                  <div
                    className="sc-hLBbgP dYEqmk self-end"
                  />
                </div>
                <div
                  className="flex text-base text-gray-400 h-7 justify-start"
                  id="metric-title"
                >
                  <p
                    className="w-auto text-clip"
                  >
                    Not dead 
                  </p>
                  <div
                    className="flex items-center pl-1 grow fill-current text-gray-600"
                    id="info-wrapper"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6a3.939 3.939 0 0 0-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 0 0-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0 0 12 6zm-1 10h2v2h-2z"
                      />
                      <path
                        d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje"
                id="metric-tooltip-Not dead"
                role="tooltip"
                style={Object {}}
              >
                <div
                  className="react-tooltip-arrow styles-module_arrow__K0L3T"
                  style={Object {}}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HospitalizationDeathChart> (hospitalized plot) dataset1 renders correctly 1`] = `
<div
  style={
    Object {
      "height": "400px",
      "width": "600px",
    }
  }
>
  <div
    className="relative h-full"
  >
    <div
      className="h-full"
    >
      <div
        className="sc-bcXHqe idcAl"
      >
        <h3
          className="my-0 pr-10 pt-0 text-gray-500"
        >
          Estimated probability of hospitalization by age group
        </h3>
        <div
          className="sc-gswNZR jVvoKy"
        >
          <div
            className="sc-dkrFOg kGkFVY"
          >
            <div
              className="recharts-responsive-container"
              style={
                Object {
                  "height": "100%",
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "width": "100%",
                }
              }
            />
          </div>
          <div
            className="pl-2 pt-3 flex lg:inline flex-row w-full sm:w-auto md:justify-end sm:flex-col sm:pt-0 sm:pl-1 sm:pb-8  md:mt-auto"
          >
            <div>
              <div
                className="sc-eDvSVe dekPos"
              >
                <svg
                  height={30}
                  viewBox="-11 -15 22 30"
                  width={22}
                >
                  <g
                    stroke="#1F407A"
                    strokeWidth={2}
                  >
                    <line
                      x1={0}
                      x2={0}
                      y1={-13}
                      y2={13}
                    />
                    <line
                      x1={-8}
                      x2={8}
                      y1={-13}
                      y2={-13}
                    />
                    <line
                      x1={-8}
                      x2={8}
                      y1={13}
                      y2={13}
                    />
                  </g>
                  <circle
                    fill="#1F407A"
                    r={5}
                  />
                </svg>
                <div
                  className="sc-jSUZER dEFcBr"
                  style={
                    Object {
                      "color": "#1F407A",
                    }
                  }
                >
                  A random name
                </div>
              </div>
              <div
                className="sc-eDvSVe dekPos"
              >
                <svg
                  height={30}
                  viewBox="-11 -15 22 30"
                  width={22}
                >
                  <g
                    stroke="#bdc3c7"
                    strokeWidth={9}
                  >
                    <line
                      x1={0}
                      x2={0}
                      y1={-13}
                      y2={13}
                    />
                    <line
                      x1={-0}
                      x2={0}
                      y1={-13}
                      y2={-13}
                    />
                    <line
                      x1={-0}
                      x2={0}
                      y1={13}
                      y2={13}
                    />
                  </g>
                  <g
                    transform="translate(0, 0) scale(12, 3.5)"
                  >
                    <polygon
                      fill="#bdc3c7"
                      points="-1,0 0,1 1,0 0,-1"
                    />
                  </g>
                </svg>
                <div
                  className="sc-jSUZER dEFcBr"
                  style={
                    Object {
                      "color": "#7f8c8d",
                    }
                  }
                >
                  Other variants
                </div>
              </div>
            </div>
            <div
              className="flex flex-col justify-end pr-1 mb-2 overflow-hidden h-full w-auto"
              id="metric-with-tooltip"
            >
              <div
                data-for="metric-tooltip-Hospitalized"
                data-tip="Number of samples taken from patients who were eventually hospitalized (A random name)"
              >
                <div
                  className="flex w-full"
                >
                  <div
                    className="w-auto grow-0 text-xl sm:text-3xl md:text-5xl"
                    style={
                      Object {
                        "color": "#1F407A",
                      }
                    }
                  >
                    2
                  </div>
                  <div
                    className="sc-hLBbgP dYEqmk self-end"
                  />
                </div>
                <div
                  className="flex text-base text-gray-400 h-7 justify-start"
                  id="metric-title"
                >
                  <p
                    className="w-auto text-clip"
                  >
                    Hospitalized 
                  </p>
                  <div
                    className="flex items-center pl-1 grow fill-current text-gray-600"
                    id="info-wrapper"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6a3.939 3.939 0 0 0-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 0 0-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0 0 12 6zm-1 10h2v2h-2z"
                      />
                      <path
                        d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje"
                id="metric-tooltip-Hospitalized"
                role="tooltip"
                style={Object {}}
              >
                <div
                  className="react-tooltip-arrow styles-module_arrow__K0L3T"
                  style={Object {}}
                />
              </div>
            </div>
            <div
              className="flex flex-col justify-end pr-1 mb-2 overflow-hidden h-full w-auto"
              id="metric-with-tooltip"
            >
              <div
                data-for="metric-tooltip-Not hosp."
                data-tip="Number of samples taken from patients who were not eventually hospitalized (A random name)"
              >
                <div
                  className="flex w-full"
                >
                  <div
                    className="w-auto grow-0 text-xl sm:text-3xl md:text-5xl"
                    style={
                      Object {
                        "color": "#1F407A",
                      }
                    }
                  >
                    108
                  </div>
                  <div
                    className="sc-hLBbgP dYEqmk self-end"
                  />
                </div>
                <div
                  className="flex text-base text-gray-400 h-7 justify-start"
                  id="metric-title"
                >
                  <p
                    className="w-auto text-clip"
                  >
                    Not hosp. 
                  </p>
                  <div
                    className="flex items-center pl-1 grow fill-current text-gray-600"
                    id="info-wrapper"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 6a3.939 3.939 0 0 0-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 0 0-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0 0 12 6zm-1 10h2v2h-2z"
                      />
                      <path
                        d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje"
                id="metric-tooltip-Not hosp."
                role="tooltip"
                style={Object {}}
              >
                <div
                  className="react-tooltip-arrow styles-module_arrow__K0L3T"
                  style={Object {}}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
